/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package exec.bit.statistics;

option java_package = "com.dremio.exec.proto";
option java_outer_classname = "StatisticsRPC";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

import "UserBitShared.proto";

////// BitControl RPC ///////
enum RpcType {
  ACK = 1;

  // exec > coordinator
  REQ_STATISTICS_INFO = 2;
  RESP_STATISTICS_INFO = 3;
}

message StatisticsInfo {
  optional string table = 1;
  optional string column = 2;
  optional int64 createdAt = 3;
  optional int64 numberOfDistinctValues = 4;
  optional int64 rowCount = 5;
  optional int64 nullCount = 6;
  optional string quantiles = 7;
}

message StatisticsInfoResp {
  repeated StatisticsInfo statistics_info = 1;
}

message StatisticsInfoReq {
}
